human-intervention-logs/org.bouncycastle:bc-fips:2.1.2/gradle-test/gradle-test-2026-06-27T09-08-01-877792Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.bouncycastle:bc-fips:2.1.2
Command: `/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 32 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:30: error: package org.graalvm.nativeimage.hosted does not exist
import org.graalvm.nativeimage.hosted.Feature;
                                     ^
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:31: error: package org.graalvm.nativeimage.hosted does not exist
import org.graalvm.nativeimage.hosted.RuntimeSerialization;
                                     ^
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:132: error: cannot find symbol
    public static final class SerializationFeature implements Feature {
                                                              ^
  symbol:   class Feature
  location: class ProvDSAPublicKeyTest
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:134: error: package Feature does not exist
        public void beforeAnalysis(Feature.BeforeAnalysisAccess access) {
                                          ^
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:133: error: method does not override or implement a method from a supertype
        @Override
        ^
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:136: error: cannot find symbol
                RuntimeSerialization.register(Class.forName(PROVIDER_PUBLIC_KEY_CLASS_NAME));
                ^
  symbol:   variable RuntimeSerialization
  location: class SerializationFeature
/home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:137: error: cannot find symbol
                RuntimeSerialization.register(Class.forName(
                ^
  symbol:   variable RuntimeSerialization
  location: class SerializationFeature
7 errors


[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/build/reports/problems/problems-report.html
FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:132: error: cannot find symbol
      public static final class SerializationFeature implements Feature {
                                                                ^
    symbol:   class Feature
    location: class ProvDSAPublicKeyTest
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:136: error: cannot find symbol
                  RuntimeSerialization.register(Class.forName(PROVIDER_PUBLIC_KEY_CLASS_NAME));
                  ^
    symbol:   variable RuntimeSerialization
    location: class SerializationFeature
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:137: error: cannot find symbol
                  RuntimeSerialization.register(Class.forName(
                  ^
    symbol:   variable RuntimeSerialization
    location: class SerializationFeature
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:133: error: method does not override or implement a method from a supertype
          @Override
          ^
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:30: error: package org.graalvm.nativeimage.hosted does not exist
  import org.graalvm.nativeimage.hosted.Feature;
                                       ^
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:31: error: package org.graalvm.nativeimage.hosted does not exist
  import org.graalvm.nativeimage.hosted.RuntimeSerialization;
                                       ^
  /home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/tests/src/org.bouncycastle/bc-fips/2.1.2/src/test/java/org_bouncycastle/bc_fips/ProvDSAPublicKeyTest.java:134: error: package Feature does not exist
          public void beforeAnalysis(Feature.BeforeAnalysisAccess access) {
                                            ^
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge3/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/5950-65912ecb/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.bouncycastle:bc-fips:2.1.2 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
